# real_time_chat_api

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 49f581a2eb19_create_user_table.py  68c68615258f_create_message_conversation_member_.py  c3a7b12c9d10_add_group_chat_fields.py  cf2eb0bd9937_init_alembic.py  d55b107b5372_initial_migration.py  eb9ee9017f3b_alembic_init_and_add_all_models.py
app/: main.py  test.txt
app/api/v1/: auth.py  chat.py  chat_group.py  chat_one_to_one.py  chat_ws.py  user.py
app/core/: auth.py  config.py  redis.py  security.py  ws.py
app/db/: database.py
app/exceptions/: __init__.py  auth.py  user.py
app/models/: __init__.py  conversation.py  conversation_member.py  message.py  user.py
app/routes/: auth.py  user.py
app/schemas/: conversation.py  message.py  token.py  user.py  ws.py
app/services/: auth.py  conversation.py  message.py  user.py
app/utils/: user.py
tests/: README.md  conftest.py  test_auth.py  test_users.py
